<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_directory"
            android:icon="@drawable/ic_directory"
            android:title="@string/nav_directory" />
        <item
            android:id="@+id/nav_jobs"
            android:icon="@drawable/ic_jobs"
            android:title="@string/nav_jobs" />
        <item
            android:id="@+id/nav_mentorship"
            android:icon="@drawable/ic_mentorship"
            android:title="@string/nav_mentorship" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_admin"
            android:title="@string/nav_admin" />
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>
